# Asase

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  FIXES_APPLIED.md  README.md  RENDER_DEPLOYMENT.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  replit.md  requirements.txt  run.py
analysis/: urls.py  utils.py  views.py
archive/: models.py  urls.py  views.py
archive/migrations/: 0001_initial.py
asase_project/: asgi.py  settings.py  urls.py  wsgi.py
core/: african_countries.py  urls.py  views.py
static/: manifest.json
staticfiles/: manifest.50e037c5c8d0.json  staticfiles.json
staticfiles/css/: main.css
staticfiles/js/: main.js  service-worker.5e72b5a5da0e.js
templates/: 404.html  500.html  base.html
templates/analysis/: live_report.html
templates/archive/: archive_main.html  location_hub.html  location_hub_main.html  locations_hub_list.html  snapshot_archive.html
templates/core/: about.html  map.html  privacy_policy.html  search.html
